--- a/Articulo.html
+++ b/Articulo.html
@@ -14,79 +14,17 @@
     </head>
     <body>
 
-        <header>
-            <div class="header-container">
-                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="20%" class="logo">
-                <nav class="navegation">
-                    <ul>
-                        <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="./Articulos.html">Artículos</a></li>
-                        <li><a href="./Login.html">Bitácora</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-
         <div class="space"></div>
 
-        <main>
+        <main style="background-image: url('./Images/Background.png'); width: 100%;">
             <div class="barra-navegation">
-                <div class="Categoria">
-                    <h3><a href="./Aborto.html">Aborto</a></h3>
-                    <ul>
-                        <li><a href="./Articulo.html">Aborto químico</a></li>
-                        <li><a href="#">Aborto Clandestino</a></li>
-                        <li><a href="#">Legalización del Aborto</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">Anticonceptivos</a></h3>
-                    <ul>
-                        <li><a href="#">Condones</a></li>
-                        <li><a href="#">Pastillas</a></li>
-                        <li><a href="#">Parche</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">Embarazo</a></h3>
-                    <ul>
-                        <li><a href="#">Planificación familiar</a></li>
-                        <li><a href="#">Embarazos de alto riesgo</a></li>
-                        <li><a href="#">Planificar tu embarazo</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">ITS & ETS</a></h3>
-                    <ul>
-                        <li><a href="#">Como prevenir ETS & ITS</a></li>
-                        <li><a href="#">Ser ceropositivo</a></li>
-                        <li><a href="#">Riesgos VIH</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">Orientación sexual y género</a></h3>
-                    <ul>
-                        <li><a href="#">Diversidad sexual</a></li>
-                        <li><a href="#">Género, una construcción social</a></li>
-                        <li><a href="#">Asexualidad</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">Salud y Bienestar</a></h3>
-                    <ul>
-                        <li><a href="#">Urología</a></li>
-                        <li><a href="#">Prevenir cancer de mama</a></li>
-                        <li><a href="#">Prevenir Cancer de prostata</a></li>
-                    </ul>
-                </div>
-                <div class="Categoria">
-                    <h3><a href="#">LGBT+</a></h3>
-                    <ul>
-                        <li><a href="#">Derechos LGBT+</a></li>
-                        <li><a href="#">Marcha por la igualdad</a></li>
-                        <li><a href="#">Cine LGBT+</a></li>
-                    </ul>
-                </div>
+                <a href="./Articulos.html">Aborto</a>
+                <a href="#">Anticonceptivos</a>
+                <a href="#">Embarazo</a>
+                <a href="#">ITS & ETS</a>
+                <a href="#">Orientación sexual y género</a>
+                <a href="#">Salud y Bienestar</a>
+                <a href="#">LGBT+</a>
             </div>
             <div class="article">
                 <section class="Photo-article">
@@ -134,6 +72,19 @@
             </div>
 
         </main>
+
+        <header style="background-image: url('./Images/Nav.png'); width: 100%;">
+            <div class="header-container">
+                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="10%" class="logo">
+                <nav class="navegation">
+                    <ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./Topics.html">Artículos</a></li>
+                        <li><a href="./Login.html">Bitácora</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
         
         <footer>
             <div class="footer-container">
@@ -147,6 +98,7 @@
                         <li>Flores Leyva Murphy Alexander</li>
                         <li>Parra Rivas Arturo Gabriel</li>
                         <li>Ruiz Hernadez Juan Manuel</li>
+                        <li><a href="https://storyset.com/love">Love illustrations by Storyset</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
