--- a/Login.html
+++ b/Login.html
@@ -13,13 +13,13 @@
     </head>
     <body>
 
-        <header>
+        <header style="background-image: url('./Images/Nav.png'); width: 100%;">
             <div class="header-container">
-                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="20%" class="logo">
+                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="10%" class="logo">
                 <nav class="navegation">
                     <ul>
                         <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="./Articulos.html">Artículos</a></li>
+                        <li><a href="./Topics.html">Artículos</a></li>
                         <li><a href="./Login.html">Bitácora</a></li>
                     </ul>
                 </nav>
@@ -28,17 +28,28 @@
 
         <div class="space"></div>
 
-        <main>
-            <div class="Botones-login">
-                <button name="Iniciar sesión" class="Blogin" id="Iniciar-Sesión"><a href="./IniciarSesion.html">Iniciar sesión</a></button>
-                <button name="Registrarse" class="Blogin"  id="Registrarse"><a href="./Registrarse.html">Registrarse</a></button>
-                <button name="Solicitar Registro como administrador" class="Blogin"  id="Registrarse-Administrador"><a href="./RegistrarseAdministrador.html">Solicitar Registro como administrador</a></button>
-            </div>
-            <div class="Titulo-login">
-                <H1>Bienvenido a su bitacora</H1>
-                <p>¿Qué desea hacer?</p>
+        <main style="background-image: url('./Images/Background.png'); width: 100%;">
+            <div class="Contenedor" style="background-image: url('./Images/Login.png'); height: 100%;">
+                <div class="Botones-login">
+                    <section class="Log">
+                        <img src="./Images/Logo.png" alt="Codyrep">
+                    </section>
+                    <section class="Pic">
+                        <img src="./Images/Couple-bro.png" alt="Codyrep">
+                    </section>
+                </div>
+                <div class="Titulo-login">
+                    <div class="Menu">
+                        <H1>Bienvenido a su bitacora</H1>
+                        <p>¿Qué desea hacer?</p>
+                        <a href="./IniciarSesion.html"><button name="Iniciar sesión" class="Blogin" id="Iniciar-Sesión">Iniciar sesión</button></a><br>
+                        <a href="./Registrarse.html"><button name="Registrarse" class="Blogin"  id="Registrarse">Registrarse</button></a><br>
+                        <a href="./RegistrarseAdministrador.html"><button name="Solicitar Registro como administrador" class="Blogin"  id="Registrarse-Administrador">Solicitar Registro como administrador</button></a><br>
+                    </div>
+                </div>
             </div>
         </main>
+        <a href="https://storyset.com/love">Love illustrations by Storyset</a>
 
     </body>
 </html>
