--- a/Topics.html
+++ b/Topics.html
@@ -8,10 +8,6 @@
         <title>Codyrep</title>
         <link rel="stylesheet" type="text/css" href="./CSS/main.css">
         <link rel="stylesheet" type="text/css" href="./CSS/Articulos.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/Articulo.css">
-        <link rel="stylesheet" type="text/css" href="./CSs/Topic.css">
-        <link rel="stylesheet" type="text/css" href="./CSs/Aborto.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     </head>
     <body>
@@ -19,40 +15,85 @@
         <div class="space"></div>
 
         <main style="background-image: url('./Images/Background.png'); width: 100%;">
-            <div class="barra-navegation">
-                    <a href="./Articulos.html">Aborto</a>
-                    <a href="#">Anticonceptivos</a>
-                    <a href="#">Embarazo</a>
-                    <a href="#">ITS & ETS</a>
-                    <a href="#">Orientación sexual y género</a>
-                    <a href="#">Salud y Bienestar</a>
-                    <a href="#">LGBT+</a>
-            </div>
-
-            <div class="list-articles">
-                <section class="element-article">
-                    <a href="./Articulo.html">
-                        <section class="Title-element">
-                            <h2>Aborto quimico</h2>
-                        </section>
+            <div class="Topics">
+                <section class="Topic">
+                    <a href="./Articulos.html">
+                        <figure class="Etopic">
+                            <img src="./Images/Aborto.png" alt="Aborto" title="Aborto"  width="100%">
+                            <div class="Capa">
+                                <h3>Aborto</h3>
+                            </div>
+                        </figure>
+                        <p>Aborto</p>
                     </a>
                 </section>
-                <section class="element-article">
+                <section class="Topic">
                     <a href="#">
-                        <section class="Title-element">
-                            <h2>Aborto Clandestino</h2>
-                        </section>
+                        <figure class="Etopic">
+                            <img src="./Images/Anticonceptivos.png" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="100%">
+                            <div class="Capa">
+                                <h3>Metodos snticonceptivos</h3>
+                            </div>
+                        </figure>
+                        <p>Metodos snticonceptivos</p>
                     </a>
                 </section>
-                <section class="element-article">
+                <section class="Topic">
+                    <a href="">
+                        <figure class="Etopic">
+                            <img src="./Images/Embarazo.png" alt="Embarazo" title="Embarazo"  width="100%">
+                            <div class="Capa">
+                                <h3>Embarazo</h3>
+                            </div>
+                        </figure>
+                        <p>Embarazo</p>
+                    </a>
+                </section>
+                <section class="Topic">
                     <a href="#">
-                        <section class="Title-element">
-                            <h2>Legalización del Aborto</h2>
-                        </section>
+                        <figure class="Etopic">
+                            <img src="./Images/ETS.png" alt="ETS & ITS" title="ETS & ITS"  width="100%">
+                            <div class="Capa">
+                                <h3>Enfermedades de Transmición sexual</h3>
+                            </div>
+                        </figure>
+                        <p>Enfermedades de Transmición sexual</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="">
+                        <figure class="Etopic">
+                            <img src="./Images/Orientacion_Sexual.png" alt="Orientación Sexual Y Género" title="Orientación Sexual Y Género"  width="100%">
+                            <div class="Capa">
+                                <h3>Orientación Sexual Y Género</h3>
+                            </div>
+                        </figure>
+                        <p>Orientación Sexual Y Género</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="#">
+                        <figure class="Etopic">
+                            <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="100%">
+                            <div class="Capa">
+                                <h3>Salud y Bienestar</h3>
+                            </div>
+                        </figure>
+                        <p>Salud y Bienestar</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="">
+                        <figure class="Etopic">
+                            <img src="./Images/LGBT.png" alt="Bandera LGBT+" title="LGBT+"  width="100%">
+                            <div class="Capa">
+                                <h3>LGBT+</h3>
+                            </div>
+                        </figure>
+                        <p>LGBT+</p>
                     </a>
                 </section>
             </div>
-
         </main>
 
         <header style="background-image: url('./Images/Nav.png'); width: 100%;">
