--- a/index.html
+++ b/index.html
@@ -14,52 +14,102 @@
 
     <body>
 
-        <header>
+        <main style="background-image: url('./Images/Background.png'); width: 100%;">
+
+            <div class="Galery">
+                <img src="./Images/main.png" alt="Bienvenido" title="Bienvenido" class="galery" width="100%">
+            </div>
+
+            <div class="Topics">
+                <section class="Topic">
+                    <a href="#">
+                        <figure class="Etopic">
+                            <img src="./Images/Anticonceptivos.png" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="100%">
+                            <div class="Capa">
+                                <h3>Metodos Anticonceptivos</h3>
+                                <p>Hay varias maneras de prevenir los embarazos. Estos métodos se basan en principios 
+                                    naturales, mecánicos y químicos y pueden ser temporales o permanentes.
+                                    Los métodos anticonceptivos son técnicas que prevención el embarazo. 
+                                    Se clasifican según su forma de actuar: mecánico o barrera, química, 
+                                    quirúrgica y natural.<br>
+                                    <br>
+                                    CLICK VER MÁS</p>
+                            </div>
+                        </figure>
+                        <p class="Vinculo">Metodos snticonceptivos</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="#">
+                        <figure class="Etopic">
+                            <img src="./Images/ETS.png" alt="ETS & ITS" title="ETS & ITS"  width="100%">
+                            <div class="Capa">
+                                <h3>ETS & ITS</h3>
+                                <p>
+                                    Las enfermedades de transmisión sexual (ETS) son infecciones que se contagian 
+                                    de una persona a otra usualmente durante el sexo vaginal, anal u oral. Son muy 
+                                    comunes y muchas personas que las tienen no tienen síntomas. Por eso, es importante 
+                                    hacerte exámenes sin importar si tienes síntomas de ETS o no. <br>
+                                    <br>
+                                    CLICK VER MÁS</p>
+                            </div>
+                        </figure>
+                        <p class="Vinculo">Enfermedades de Transmición sexual</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="#">
+                        <figure class="Etopic">
+                            <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="100%">
+                            <div class="Capa">
+                                <h3>Salud y Bienestar</h3>
+                                <p>
+                                    La generación actual es la más grande que se haya registrado en la historia de la 
+                                    humanidad. Las condiciones en las que toman decisiones sobre su sexualidad, los 
+                                    elementos y servicios con los que cuentan para ello, así como las oportunidades de 
+                                    educación y desarrollo disponibles, tienen un importante efecto en su calidad de vida y 
+                                    en las tendencias poblacionales de las siguientes décadas. <br>
+                                    <br>
+                                    CLICK VER MÁS
+                                </p>
+                            </div>
+                        </figure>
+                        <p class="Vinculo">Salud y Bienestar</p>
+                    </a>
+                </section>
+                <section class="Topic">
+                    <a href="#">
+                        <figure class="Etopic">
+                            <img src="./Images/LGBT.png" alt="Bandera LGBT+" title="LGBT+"  width="100%">
+                            <div class="Capa">
+                                <h3>LGBT+</h3>
+                                <p>Las siglas LGTB están formadas por las iniciales de Lesbianas, Gais, Transexuales 
+                                    y Bisexuales. En ellas confluyen todas las personas con orientaciones sexuales o 
+                                    identidades de género englobadas en esos cuatro términos.
+                                    Este movimiento lucha por la igualdad de las personas pertenecientes a estas 
+                                    comunidades sexuales minoritarias. <br>
+                                    <br>
+                                    CLICK VER MÁS</p>
+                            </div>
+                        </figure>
+                        <p class="Vinculo">LGBT+</p>
+                    </a>
+                </section>
+            </div>
+        </main>
+        <header style="background-image: url('./Images/Nav.png'); width: 100%;">
             <div class="header-container">
-                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="20%" class="logo">
+                <img src="./Images/logo.png" alt="Codificate" title="Codificate" width="10%" class="logo">
                 <nav class="navegation">
                     <ul>
                         <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="./Articulos.html">Artículos</a></li>
+                        <li><a href="./Topics.html">Artículos</a></li>
                         <li><a href="./Login.html">Bitácora</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <main>
-
-            <div class="Galery">
-                <img src="./Images/main.jpg" alt="Bienvenido" title="Bienvenido" class="galery" width="100%">
-            </div>
-
-            <div class="Topics">
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/Anticonceptivos.jpg" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="90%">
-                        <p>Metodos snticonceptivos</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/ETS.jpg" alt="ETS & ITS" title="ETS & ITS"  width="90%">
-                        <p>Enfermedades de Transmición sexual</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="90%">
-                        <p>Salud y Bienestar</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="">
-                        <img src="./Images/LGBT.jpg" alt="Bandera LGBT+" title="LGBT+"  width="90%">
-                        <p>LGBT+</p>
-                    </a>
-                </section>
-            </div>
-        </main>
         
         <footer>
             <div class="footer-container">
@@ -73,6 +123,7 @@
                         <li>Flores Leyva Murphy Alexander</li>
                         <li>Parra Rivas Arturo Gabriel</li>
                         <li>Ruiz Hernadez Juan Manuel</li>
+                        <li><a href="https://storyset.com/love">Love illustrations by Storyset</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
