--- a/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/Topics.html
+++ b/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/Topics.html
@@ -20,7 +20,7 @@
 
             <div class="Topics">
                 <section class="Topic">
-                    <a href="./Articulos.html">
+                    <a href="./Aborto.html">
                         <figure class="Etopic">
                             <img src="./Images/Aborto.png" alt="Aborto" title="Aborto"  width="100%">
                             <div class="Capa">
@@ -31,7 +31,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="#">
+                    <a href="./MetodosAnti.html">
                         <figure class="Etopic">
                             <img src="./Images/Anticonceptivos.png" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="100%">
                             <div class="Capa">
@@ -42,7 +42,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="">
+                    <a href="./Embarazo.html">
                         <figure class="Etopic">
                             <img src="./Images/Embarazo.png" alt="Embarazo" title="Embarazo"  width="100%">
                             <div class="Capa">
@@ -53,7 +53,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="#">
+                    <a href="./ETS&ITS.html">
                         <figure class="Etopic">
                             <img src="./Images/ETS.png" alt="ETS & ITS" title="ETS & ITS"  width="100%">
                             <div class="Capa">
@@ -64,7 +64,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="">
+                    <a href="./Orientación.html">
                         <figure class="Etopic">
                             <img src="./Images/Orientacion_Sexual.png" alt="Orientación Sexual Y Género" title="Orientación Sexual Y Género"  width="100%">
                             <div class="Capa">
@@ -75,7 +75,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="#">
+                    <a href="Salud.html">
                         <figure class="Etopic">
                             <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="100%">
                             <div class="Capa">
@@ -86,7 +86,7 @@
                     </a>
                 </section>
                 <section class="Topic">
-                    <a href="">
+                    <a href="./LGBT.html">
                         <figure class="Etopic">
                             <img src="./Images/LGBT.png" alt="Bandera LGBT+" title="LGBT+"  width="100%">
                             <div class="Capa">
@@ -130,10 +130,8 @@
                 <div class="col-foot">
                     <h4>Sobre nosotros</h4>
                     <ul>
-                        <li><a href="#">Otros Productos</a></li>
-                        <li><a href="#">¿Quienes somos?</a></li>
-                        <li><a href="#">Servicios y productos</a></li>
-                        <li><a href="#">Contactanos</a></li>
+                        <li><a href="./conocenos.html">Contáctanos</a></li>
+                        <li><a href="./ideario.html">Servicios y productos</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
@@ -141,17 +139,15 @@
                     <ul>
                         <li><a href="#">Preguntas frecuentes</a></li>
                         <li><a href="#">Envia preguntas</a></li>
-                        <li><a href="#">¿Qué es Codyrep?</a></li>
-                        <li><a href="#">Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
                     <h4>Siguenos</h4>
                     <div class="social-links">
                         <ul>
-                            <a href="#"><li class="fab fa-facebook"></li></a>
-                            <a href="#"><li class="fab fa-twitter"></li></a>
-                            <a href="#"><li class="fab fa-instagram"></li></a>
+                            <a href="https://www.facebook.com/profile.php?id=100069448171792"><li class="fab fa-facebook"></li></a>
+                            <a href="https://twitter.com/Codificate2"><li class="fab fa-twitter"></li></a>
+                            <a href="https://www.instagram.com/codificate32/"><li class="fab fa-instagram"></li></a>
                         </ul>
                     </div>
                 </div>
